# 2024

term_1/wk_01/my_sol/: CMakeLists.txt  task10.cpp  task11.cpp  task3.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
term_1/wk_03/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
